# polkadot-spec

./: README.md
.github/workflows/: specification.yml
host-spec/: .gitignore  c06-consensus.tm  host-spec.scm
polkadot-host-spec/: ae-hostapi.tm  c02-state.tm  c03-transition.tm
runtime-spec/: availability_and_validity.tex  part1.tex  temp-flowchart.tex  transaction_weights.tex
test/: README.md
test/adapters/kagome/: CMakeLists.txt
test/adapters/substrate/runtime/: build.rs
test/testers/host/: Makefile
test/testers/host-legacy/: Makefile
test/testers/host-legacy/runtime/: Cargo.toml  build.rs
test/testers/host/runtime/: Cargo.toml  build.rs
test/testers/network-tester/: Cargo.toml
test/testers/network-tester/src/: client_connection.rs  lib.rs
